# vera-design-ops-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md
design-ops-navigator/: .env.example  .gitignore  deploy.sh  firestore.rules
design-ops-navigator/backend/: .dockerignore  .gitignore  Dockerfile  __init__.py  agent.py  cloudbuild.yaml  config.py  pyproject.toml  server.py  test_crash.py
design-ops-navigator/backend/agents/: __init__.py  critic_agent.py  figma_fetcher_agent.py  orchestrator_agent.py  retriever_agent.py
design-ops-navigator/backend/auth/: firebase_auth.py
design-ops-navigator/backend/knowledge/: embeddings.py  fetch_sources.py  ingest.py  user_docs.py
design-ops-navigator/backend/knowledge/sources/: cognitive_laws.md  form_design.md  gestalt_principles.md  interaction_patterns.md  material_design_3.md  nielsen_heuristics.md  typography.md  wcag_2_2.md
design-ops-navigator/backend/tests/: test_day1_3.py  test_integrations.py
design-ops-navigator/backend/tests/eval/: eval_config.json  eval_config_critique.json
design-ops-navigator/backend/tests/eval/evalsets/: critique_quality.json  route_b_quality.json
design-ops-navigator/backend/tools/: critic_tools.py  figma_tools.py  rag_tools.py  web_search_tool.py
design-ops-navigator/frontend/: .dockerignore  Dockerfile  cloudbuild.yaml  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
research/: AI Design Ops Navigator Research.md  GUARDRAILS.md  gen_eval_charts.py  gen_hcai_chart.py  research_synthesis.md
(+30 files in other folders)
